# niyo-tms

./: .editorconfig  .env.sample  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-pipeline.yml
scripts/: entrypoint.sh
src/: conftest.py
src/account/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  user_admin_form.py  views.py
src/account/management/commands/: provisionsuperuser.py
src/account/migrations/: 0001_initial.py
src/authentication/: serializers.py  urls.py  views.py
src/authentication/tests/: change_password_view.py  test_login_view.py  test_refresh_token_view.py  test_register_view.py
src/core/: admin.py  enums.py  exceptions.py  models.py  renderers.py
src/core/tests/: constants.py  fixtures.py
src/doc/: apps.py  tests.py  urls.py  views.py
src/project/: asgi.py  settings.py  urls.py
src/project/settings/: __init__.py
src/project/settings/components/: common.py  custom.py  logging.py  rest_framework.py  websocket.py
src/project/settings/environments/: development.py  production.py  staging.py
src/task/: admin.py  choices.py  constant.py  consumer.py  enums.py  models.py  permissions.py  routing.py  serializers.py  urls.py  utils.py  views.py
src/task/migrations/: 0001_initial.py
src/task/tests/: test_create_task_api.py  test_delete_task_api.py  test_get_task_api.py  test_partial_update_api.py  test_task_websocket.py  test_update_task_api.py
